--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - "3001:3232"
 
   jenkins:
-    image: jenkins/jenkins
-    #build: .
+    # image: jenkins/jenkins
+    build: .
     ports:
       - 8080:8080
       - 50000:50000
